<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="#FFFFFF"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1.00">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tariffs"
        android:textStyle="normal"
        android:paddingTop="@dimen/indent"
        android:paddingBottom="@dimen/indent"
        android:paddingLeft="@dimen/indent"
        android:textSize="@dimen/header"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/indent"
        android:paddingRight="@dimen/indent"
        android:paddingBottom="@dimen/indent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/light"
            android:textSize="@dimen/service_name_size"
            android:layout_weight="1"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:textColor="@color/settings_color"
            android:id="@+id/editTextLightTariff"
            android:layout_weight="1" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/indent"
        android:paddingRight="@dimen/indent"
        android:paddingBottom="@dimen/indent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cold_water"
            android:textSize="@dimen/service_name_size"
            android:layout_weight="1"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:textColor="@color/settings_color"
            android:id="@+id/editTextColdWaterTariff"
            android:layout_weight="1" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/indent"
        android:paddingRight="@dimen/indent"
        android:paddingBottom="@dimen/indent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hot_water"
            android:textSize="@dimen/service_name_size"
            android:layout_weight="1"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:textColor="@color/settings_color"
            android:id="@+id/editTextHotWaterTariff"
            android:layout_weight="1" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_position"
        android:textStyle="normal"
        android:paddingTop="@dimen/indent"
        android:paddingBottom="@dimen/indent"
        android:paddingLeft="@dimen/indent"
        android:textSize="@dimen/header"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/indent"
        android:paddingRight="@dimen/indent"
        android:paddingBottom="@dimen/indent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/light"
            android:textSize="@dimen/service_name_size"
            android:layout_weight="1"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:textColor="@color/settings_color"
            android:id="@+id/editTextLightPosition"
            android:layout_weight="1" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/indent"
        android:paddingRight="@dimen/indent"
        android:paddingBottom="@dimen/indent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cold_water"
            android:textSize="@dimen/service_name_size"
            android:layout_weight="1"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:textColor="@color/settings_color"
            android:id="@+id/editTextColdWaterPosition"
            android:layout_weight="1" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/indent"
        android:paddingRight="@dimen/indent"
        android:paddingBottom="@dimen/indent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hot_water"
            android:textSize="@dimen/service_name_size"
            android:layout_weight="1"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:textColor="@color/settings_color"
            android:id="@+id/editTextHotWaterPosition"
            android:layout_weight="1" />

    </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingRight="@dimen/indent"
        android:paddingLeft="@dimen/indent"
        android:paddingBottom="@dimen/indent">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:id="@+id/buttonConfirm"
            android:layout_gravity="bottom"
            android:background="@color/settings_color" />

    </LinearLayout>

</LinearLayout>