<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:weightSum="1"
    android:paddingTop="@dimen/indent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/indent"
        android:paddingRight="@dimen/indent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/textViewPeriod"
            android:text=""
            android:textSize="@dimen/header"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:id="@+id/textViewMonthPay"
            android:text=""
            android:textSize="@dimen/header"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/linearLayout"
        android:paddingLeft="@dimen/indent"
        android:paddingRight="@dimen/indent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/light"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textViewLightPay"
                android:text=""/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/indent"
            android:paddingTop="@dimen/indent"
            android:orientation="vertical"
            android:layout_weight="1">

            <View
                android:layout_width="@dimen/line"
                android:layout_height="@dimen/line_vertical"
                android:background="@color/main_menu"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingLeft="@dimen/indent"
            android:paddingRight="@dimen/indent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cold_water"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textViewColdWaterPay"
                android:text=""/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/indent"
            android:paddingTop="@dimen/indent"
            android:orientation="vertical"
            android:layout_weight="1">

            <View
                android:layout_width="@dimen/line"
                android:layout_height="@dimen/line_vertical"
                android:background="@color/main_menu"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingLeft="@dimen/indent"
            android:paddingRight="@dimen/indent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hot_water"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textViewHotWaterPay"
                android:text=""/>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/indent"
        android:paddingRight="@dimen/indent">

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/line"
            android:background="@color/main_menu"/>

    </LinearLayout>

</LinearLayout>